--- a/assets/scss/config/default/_variables.scss
+++ b/assets/scss/config/default/_variables.scss
@@ -349,7 +349,7 @@ $cyans: (
 // fusv-enable
 
 // scss-docs-start theme-color-variables
-$primary: $indigo;
+$primary: $purple-400;
 $secondary: $blue;
 $success: $green;
 $info: $cyan;
