--- a/assets/scss/pages/_authentication.scss
+++ b/assets/scss/pages/_authentication.scss
@@ -31,7 +31,8 @@
 }
 
 .auth-one-bg{
-    background-image: url("/assets/images/login_bg_result.webp");
+    background-image: url("/assets/images/bg-image.webp");
+    // background-image: url("/assets/images/login_bg_result.webp");
     background-position: center;
     background-size: cover;
 
@@ -97,6 +98,9 @@
 // Auth cover
 
 .auth-bg-cover{
+    // background-image: url("/assets/images/login_bg_result.webp");
+    // background-position: center;
+    // background-size: cover;
     background: $auth-bg-cover;
 
     > .bg-overlay{
