user list better

--- a/assets/scss/config/app.scss
+++ b/assets/scss/config/app.scss
@@ -128,4 +128,5 @@
 // @import "../rtl/plugins-rtl";
 // @import '../../../node_modules/@vueform/toggle/themes/default.css';
 @import 'custom';
+@import 'datatable.scss';
 @import 'orgChart';
