--- a/assets/scss/config/datatable.scss
+++ b/assets/scss/config/datatable.scss
@@ -264,6 +264,23 @@ table.dataTable>thead .sorting_desc_disabled:after {
     right: 0.5em;
     content: '↓';
 }
+// table.dataTable>thead .before-sticky.sorting:before,
+// table.dataTable>thead .before-sticky.sorting_asc:before,
+// table.dataTable>thead .before-sticky.sorting_desc:before,
+// table.dataTable>thead .before-sticky.sorting_asc_disabled:before,
+// table.dataTable>thead .before-sticky.sorting_desc_disabled:before {
+//     right: 2em;
+//     content: '↑';
+// }
+
+// table.dataTable>thead .before-sticky.sorting:after,
+// table.dataTable>thead .before-sticky.sorting_asc:after,
+// table.dataTable>thead .before-sticky.sorting_desc:after,
+// table.dataTable>thead .before-sticky.sorting_asc_disabled:after,
+// table.dataTable>thead .before-sticky.sorting_desc_disabled:after {
+//     right: 1.5em;
+//     content: '↓';
+// }
 
 table.dataTable>thead .sorting_asc:before,
 table.dataTable>thead .sorting_desc:after {
@@ -1765,7 +1782,7 @@ table.dataTable td.sticky {
     background: #f9f9f9;
     z-index: 1;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-    min-width: 120px;
+    // min-width: 120px;
 }
 
 table.dataTable th.sticky {
@@ -1773,11 +1790,12 @@ table.dataTable th.sticky {
     /* Higher z-index for table headers */
 }
 
-th.before-sticky,
-td.before-sticky {
-    padding-right: 10px;
-    /* Prevent text from being clipped */
-}
+// th.before-sticky,
+// td.before-sticky {
+//     padding-right: 15px;
+//     min-width: 110px;
+//     /* Prevent text from being clipped */
+// }
 
 // table.dataTable th.sticky::after,
 // table.dataTable td.sticky::after {
