--- a/assets/scss/config/app.scss
+++ b/assets/scss/config/app.scss
@@ -14,6 +14,7 @@
 @import 'bootstrap/scss/mixins';
 @import '../components/utilities';
 @import 'bootstrap/scss/bootstrap';
+@import '@vueform/vueform/themes/bootstrap/scss/index.scss';
 // @use './default';
 // @use './bootstrap/index';
 
