--- a/assets/scss/pages/_galaxy.scss
+++ b/assets/scss/pages/_galaxy.scss
@@ -100,9 +100,9 @@ body {
 }
 
 // profile Page
-.profile-wid-bg::before {
-    background: none;
-}
+// .profile-wid-bg::before {
+//     background: none;
+// }
 
 @media (min-width: 1350px) {
     .file-manager-sidebar,
